Fix jumping sidebar

--- a/src/components/Layout/styles.scss
+++ b/src/components/Layout/styles.scss
@@ -30,6 +30,7 @@
     top: 0;
     left: 0;
     bottom: 0;
+    width: 100px;
     min-width: 100px;
     padding-left: 1.5rem;
     padding-right: 1.5rem;
